jpg: fix colors for sequential RGB

Fixes Ticket850

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>